# eda-to-model-scaffold

./: .gitignore  .pypirc.example  ARTIFACTORY_WORKFLOW.md  ARTIFACTORY_WORKFLOW_SETUP.md  GUIDE.md  GUIDE2.md  GUIDE3.md  MANIFEST.in  PACKAGING_GUIDE.md  README.md  classification_eda_patterns_table.md  eda_patterns_table.md  pyproject-poetry.toml  pyproject.toml  requirements-full.txt
notebooks/: 02_train_evaluate.ipynb  03_time_series_cv.ipynb  04_optuna_shap_demo.ipynb  05_conformal_intervals.ipynb  06_model_comparison_stats.ipynb  07_classification_calibration_conformal.ipynb
scripts/: compare.py
src/calibration/: conformal.py
src/eda_to_model_scaffold/: __init__.py
src/eda_to_model_scaffold/calibration/: __init__.py  temperature.py
src/eda_to_model_scaffold/evaluation/: __init__.py  plots.py
src/eda_to_model_scaffold/explain/: __init__.py
src/eda_to_model_scaffold/features/: __init__.py
src/eda_to_model_scaffold/scripts/: __init__.py  optuna_tune.py  train.py
src/eda_to_model_scaffold/time_series/: __init__.py  features.py  workflow.py
src/eda_to_model_scaffold/tuning/: __init__.py
src/evaluation/: metrics.py  stats.py
src/explain/: shap_utils.py
src/features/: pipelines.py
src/tuning/: optuna_tuner.py
